--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -29,5 +29,12 @@ pipeline{
                 '''
             }
         }
+        stage('Uptime'){
+            steps{
+                sh '''
+                    uptime
+                '''
+            }
+        }
     }
 }
