--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -36,5 +36,12 @@ pipeline{
                 '''
             }
         }
+        stage('Date'){
+            steps{
+                sh '''
+                    date
+                '''
+            }
+        }
     }
 }
